Card - Equal Height Columns

--- a/html/index.html
+++ b/html/index.html
@@ -366,10 +366,9 @@
   <!-- Content -->
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2">
-      <div class="Grid-cell">
-  <div class="element">
+      <div class="Grid-cell cardBottomBorder BYP float cardBorder borderRadiusS shadowBoxLt paddingNone marginXS">
     <a class="no-hover-effect">
-      <div class="cardBottomBorder BYP float cardBorder borderRadiusS shadowBoxLt">
+      <div class="">
         <div class="img__wrap">
           <img class="img__img" alt="Work Samples" src="/projectImages/Cover_BYP_B2C.png" />
           <div class="img__description">
@@ -403,12 +402,10 @@
         </div>
       </div>
     </a>
-  </div>
 </div>
-      <div class="Grid-cell">
-  <div class="element">
+      <div class="Grid-cell cardBottomBorder BYP float cardBorder borderRadiusS shadowBoxLt paddingNone marginXS">
     <a class="no-hover-effect">
-      <div class="cardBottomBorder BYP float cardBorder borderRadiusS shadowBoxLt">
+      <div class="">
         <div class="img__wrap">
           <img class="img__img" alt="Work Samples" src="/projectImages/Cover_BYP_AppB2B.png" />
           <div class="img__description">
@@ -442,15 +439,13 @@
         </div>
       </div>
     </a>
-  </div>
 </div>
 
     </div>
     <div class="Grid Grid--gutters Grid--cols-2">
-      <div class="Grid-cell">
-  <div class="element">
+      <div class="Grid-cell cardBottomBorder BYP float cardBorder borderRadiusS shadowBoxLt paddingNone marginXS">
     <a class="no-hover-effect">
-      <div class="cardBottomBorder BYP float cardBorder borderRadiusS shadowBoxLt">
+      <div class="">
         <div class="img__wrap">
           <img class="img__img" alt="Work Samples" src="/projectImages/Cover_BYP_AppB2B_Redesign.png" />
           <div class="img__description">
@@ -484,12 +479,10 @@
         </div>
       </div>
     </a>
-  </div>
 </div>
-      <div class="Grid-cell">
-  <div class="element">
+      <div class="Grid-cell cardBottomBorder LASO float cardBorder borderRadiusS shadowBoxLt paddingNone marginXS">
     <a class="no-hover-effect">
-      <div class="cardBottomBorder LASO float cardBorder borderRadiusS shadowBoxLt">
+      <div class="">
         <div class="img__wrap">
           <img class="img__img" alt="Work Samples" src="/projectImages/Cover_LASO_AdminPanel.png" />
           <div class="img__description">
@@ -523,15 +516,13 @@
         </div>
       </div>
     </a>
-  </div>
 </div>
 
     </div>
     <div class="Grid Grid--gutters Grid--cols-2">
-      <div class="Grid-cell">
-  <div class="element">
+      <div class="Grid-cell cardBottomBorder LASO float cardBorder borderRadiusS shadowBoxLt paddingNone marginXS">
     <a class="no-hover-effect">
-      <div class="cardBottomBorder LASO float cardBorder borderRadiusS shadowBoxLt">
+      <div class="">
         <div class="img__wrap">
           <img class="img__img" alt="Work Samples" src="/projectImages/Cover_LASO_RXZero.png" />
           <div class="img__description">
@@ -565,12 +556,10 @@
         </div>
       </div>
     </a>
-  </div>
 </div>
-      <div class="Grid-cell">
-  <div class="element">
+      <div class="Grid-cell cardBottomBorder LASO float cardBorder borderRadiusS shadowBoxLt paddingNone marginXS">
     <a class="no-hover-effect">
-      <div class="cardBottomBorder LASO float cardBorder borderRadiusS shadowBoxLt">
+      <div class="">
         <div class="img__wrap">
           <img class="img__img" alt="Work Samples" src="/projectImages/Cover_LASO_CostCalculator.png" />
           <div class="img__description">
@@ -604,7 +593,6 @@
         </div>
       </div>
     </a>
-  </div>
 </div>
 
     </div>
@@ -612,62 +600,41 @@
 
     </div>
     <div class="Grid Grid--gutters Grid--cols-3">
-      <div class="Grid-cell">
+      <div class="Grid-cell shadowBoxLt float cardBorder borderRadiusS cardBottomBorder GLORIFY paddingNone marginXS">
+  <img src="/projectImages/Cover_Glorify.png" alt="Glorify: Transforming Solitary Devotion into Community Engagement">
+
   <div class="element">
     <a class="no-hover-effect" href="/glorify/">
-      <div class="">
-        <div class="cardBottomBorder GLORIFY float cardBorder borderRadiusS shadowBoxLt">
-          <img src="/projectImages/Cover_Glorify.png" alt="Glorify: Transforming Solitary Devotion into Community Engagement">
-          <div class="element">
-            <div class="element">
-              <h3 class="arrCard"><strong>Glorify: Transforming Solitary Devotion into Community Engagement</strong></h3>
-              <h4>This case study explores the evolution of the Glorify app, a mobile platform dedicated to enhancing individual spiritual journeys, into a vibrant community hub for collective faith building.
-              </h4>
-            </div>
-          </div>
-        </div>
-      </div>
+      <h3 class="arrCard" data-aos="fade-up"><strong>Glorify: Transforming Solitary Devotion into Community Engagement</strong></h3>
+      <h4>This case study explores the evolution of the Glorify app, a mobile platform dedicated to enhancing individual spiritual journeys, into a vibrant community hub for collective faith building.
+      </h4>
     </a>
   </div>
 </div>
-      <div class="Grid-cell">
+      <div class="Grid-cell shadowBoxLt float cardBorder borderRadiusS cardBottomBorder SEER paddingNone marginXS">
+  <img src="/projectImages/Cover_SEER.png" alt="SEER: Enhancing Brand Impact on Reddit">
+
   <div class="element">
     <a class="no-hover-effect" href="/seer/">
-      <div class="">
-        <div class="cardBottomBorder SEER float cardBorder borderRadiusS shadowBoxLt">
-          <img src="/projectImages/Cover_SEER.png" alt="SEER: Enhancing Brand Impact on Reddit">
-          <div class="element">
-            <div class="element">
-              <h3 class="arrCard"><strong>SEER: Enhancing Brand Impact on Reddit</strong></h3>
-              <h4>A conceptual UX case study aimed at transforming Reddit data into actionable
+      <h3 class="arrCard" data-aos="fade-up"><strong>SEER: Enhancing Brand Impact on Reddit</strong></h3>
+      <h4>A conceptual UX case study aimed at transforming Reddit data into actionable
               insights for brand marketers. This design explores the potential of intuitive
               analytics to understand user sentiment and engagement, offering a glimpse into the
               future of targeted marketing strategies.
-              </h4>
-            </div>
-          </div>
-        </div>
-      </div>
+      </h4>
     </a>
   </div>
 </div>
-      <div class="Grid-cell">
+      <div class="Grid-cell shadowBoxLt float cardBorder borderRadiusS cardBottomBorder APPOINTA paddingNone marginXS">
+  <img src="/projectImages/Cover_APPOINTA.png" alt="APPOINTA: Interview Scheduling Made Simple">
+
   <div class="element">
     <a class="no-hover-effect" href="/appointa/">
-      <div class="">
-        <div class="cardBottomBorder APPOINTA float cardBorder borderRadiusS shadowBoxLt">
-          <img src="/projectImages/Cover_APPOINTA.png" alt="APPOINTA: Interview Scheduling Made Simple">
-          <div class="element">
-            <div class="element">
-              <h3 class="arrCard"><strong>APPOINTA: Interview Scheduling Made Simple</strong></h3>
-              <h4>Explore my UX case study aimed at revamping interview scheduling. This project
+      <h3 class="arrCard" data-aos="fade-up"><strong>APPOINTA: Interview Scheduling Made Simple</strong></h3>
+      <h4>Explore my UX case study aimed at revamping interview scheduling. This project
                 streamlines the recruiter&#39;s tasks, speeds up hiring, and enhances scheduling
                 experiences, reducing interview coordination time and boosting recruitment efficiency.
-              </h4>
-            </div>
-          </div>
-        </div>
-      </div>
+      </h4>
     </a>
   </div>
 </div>
@@ -698,21 +665,14 @@
   <!-- Arrow -->
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-3">
-      <div class="Grid-cell">
+      <div class="Grid-cell shadowBoxLt float cardBorder borderRadiusS cardBottomBorder  paddingNone marginXS">
+  <img src="/projectImages/vicky_website_short.svg" alt="Scalable Design System Design and Implementation">
+
   <div class="element">
     <a class="no-hover-effect" href="/design_system/">
-      <div class="">
-        <div class="cardBottomBorder  float cardBorder borderRadiusS shadowBoxLt">
-          <img src="/projectImages/vicky_website_short.svg" alt="Scalable Design System Design and Implementation">
-          <div class="element">
-            <div class="element">
-              <h3 class="arrCard"><strong>Scalable Design System Design and Implementation</strong></h3>
-              <h4>A comprehensive system that enhances the scalability and consistency of UX design. It serves as a practical guide for designing scalable, efficient, and cohesive user interfaces and experiences.
-              </h4>
-            </div>
-          </div>
-        </div>
-      </div>
+      <h3 class="arrCard" data-aos="fade-up"><strong>Scalable Design System Design and Implementation</strong></h3>
+      <h4>A comprehensive system that enhances the scalability and consistency of UX design. It serves as a practical guide for designing scalable, efficient, and cohesive user interfaces and experiences.
+      </h4>
     </a>
   </div>
 </div>
