--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <!--Head-->
 <head>
   <meta charset="UTF-8">
@@ -353,7 +353,7 @@
             <div class="Grid-cell">
                 <div class="element">
                     <h2 class="tArrow">
-                        Case Study <img class="seArrow" src="/icon/arrow-se.svg" alt="icon arrow">
+                        UX Case Study <img class="seArrow" src="/icon/arrow-se.svg" alt="icon arrow">
                     </h2>
                 </div>
             </div>
@@ -370,7 +370,7 @@
     <a class="no-hover-effect">
       <div class="">
         <div class="img__wrap">
-          <img class="img__img" alt="Work Samples" src="/projectImages/Cover_BYP_B2C.png" />
+          <img class="img__img" alt="Consumer Booking Experience: A Journey to Enhanced Engagement and Conversion" src="/projectImages/Cover_BYP_B2C.png" />
           <div class="img__description">
             <div class="input-field">
               <div class="column">
@@ -381,7 +381,7 @@
                 <div class="pwContainer">
                   <input class="PWinput psJS" type="password" id="consumerBooking" placeholder="Enter password">
                   <button class="passwordArr" type="submit">
-                    <img src="/icon/arrow-forward.svg" alt="Enter">
+                    <img src="/icon/arrow-forward.svg" width="908" height="504" alt="Consumer Booking Experience: A Journey to Enhanced Engagement and Conversion">
                   </button>
                 </div>
                 <div class="pwIncorrectHeight">
@@ -407,7 +407,7 @@
     <a class="no-hover-effect">
       <div class="">
         <div class="img__wrap">
-          <img class="img__img" alt="Work Samples" src="/projectImages/Cover_BYP_AppB2B.png" />
+          <img class="img__img" alt="Streamlined Onboarding &amp; Engagement: Mastering B2B SaaS Subscription Success" src="/projectImages/Cover_BYP_AppB2B.png" />
           <div class="img__description">
             <div class="input-field">
               <div class="column">
@@ -418,7 +418,7 @@
                 <div class="pwContainer">
                   <input class="PWinput psJS" type="password" id="onboardingSubscription" placeholder="Enter password">
                   <button class="passwordArr" type="submit">
-                    <img src="/icon/arrow-forward.svg" alt="Enter">
+                    <img src="/icon/arrow-forward.svg" width="908" height="504" alt="Streamlined Onboarding &amp; Engagement: Mastering B2B SaaS Subscription Success">
                   </button>
                 </div>
                 <div class="pwIncorrectHeight">
@@ -440,25 +440,24 @@
       </div>
     </a>
 </div>
-
     </div>
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell cardBottomBorder BYP float cardBorder borderRadiusS shadowBoxLt paddingNone marginXS">
     <a class="no-hover-effect">
       <div class="">
         <div class="img__wrap">
-          <img class="img__img" alt="Work Samples" src="/projectImages/Cover_BYP_AppB2B_Redesign.png" />
+          <img class="img__img" alt="BookYourPet Redefined: Powering Up the Pet Service Booking Revolution" src="/projectImages/Cover_BYP_AppB2B_Redesign.png" />
           <div class="img__description">
             <div class="input-field">
               <div class="column">
-                <label for="rxZero">
+                <label for="b2bAppRedesign">
                   <h5>Password</h5>
                 </label>
 
                 <div class="pwContainer">
-                  <input class="PWinput psJS" type="password" id="rxZero" placeholder="Enter password">
+                  <input class="PWinput psJS" type="password" id="b2bAppRedesign" placeholder="Enter password">
                   <button class="passwordArr" type="submit">
-                    <img src="/icon/arrow-forward.svg" alt="Enter">
+                    <img src="/icon/arrow-forward.svg" width="908" height="504" alt="BookYourPet Redefined: Powering Up the Pet Service Booking Revolution">
                   </button>
                 </div>
                 <div class="pwIncorrectHeight">
@@ -484,7 +483,7 @@
     <a class="no-hover-effect">
       <div class="">
         <div class="img__wrap">
-          <img class="img__img" alt="Work Samples" src="/projectImages/Cover_LASO_AdminPanel.png" />
+          <img class="img__img" alt="LASO Admin Panel: From Concept to Reality - Simplified User Management" src="/projectImages/Cover_LASO_AdminPanel.png" />
           <div class="img__description">
             <div class="input-field">
               <div class="column">
@@ -495,7 +494,7 @@
                 <div class="pwContainer">
                   <input class="PWinputLH psJS" type="password" id="adminPanel" placeholder="Enter password">
                   <button class="passwordArr" type="submit">
-                    <img src="/icon/arrow-forward.svg" alt="Enter">
+                    <img src="/icon/arrow-forward.svg" width="908" height="504" alt="LASO Admin Panel: From Concept to Reality - Simplified User Management">
                   </button>
                 </div>
                 <div class="pwIncorrectHeight">
@@ -524,7 +523,7 @@
     <a class="no-hover-effect">
       <div class="">
         <div class="img__wrap">
-          <img class="img__img" alt="Work Samples" src="/projectImages/Cover_LASO_RXZero.png" />
+          <img class="img__img" alt="Shifting Focus: The Evolution of LASO to RX Zero" src="/projectImages/Cover_LASO_RXZero.png" />
           <div class="img__description">
             <div class="input-field">
               <div class="column">
@@ -535,7 +534,7 @@
                 <div class="pwContainer">
                   <input class="PWinputLH psJS" type="password" id="rxZero" placeholder="Enter password">
                   <button class="passwordArr" type="submit">
-                    <img src="/icon/arrow-forward.svg" alt="Enter">
+                    <img src="/icon/arrow-forward.svg" width="908" height="504" alt="Shifting Focus: The Evolution of LASO to RX Zero">
                   </button>
                 </div>
                 <div class="pwIncorrectHeight">
@@ -561,7 +560,7 @@
     <a class="no-hover-effect">
       <div class="">
         <div class="img__wrap">
-          <img class="img__img" alt="Work Samples" src="/projectImages/Cover_LASO_CostCalculator.png" />
+          <img class="img__img" alt="RX Zero Savings Explorer - Cost-benefit Calculator" src="/projectImages/Cover_LASO_CostCalculator.png" />
           <div class="img__description">
             <div class="input-field">
               <div class="column">
@@ -572,7 +571,7 @@
                 <div class="pwContainer">
                   <input class="PWinputLH psJS" type="password" id="costCalculator" placeholder="Enter password">
                   <button class="passwordArr" type="submit">
-                    <img src="/icon/arrow-forward.svg" alt="Enter">
+                    <img src="/icon/arrow-forward.svg" width="908" height="504" alt="RX Zero Savings Explorer - Cost-benefit Calculator">
                   </button>
                 </div>
                 <div class="pwIncorrectHeight">
@@ -601,42 +600,39 @@
     </div>
     <div class="Grid Grid--gutters Grid--cols-3">
       <div class="Grid-cell shadowBoxLt float cardBorder borderRadiusS cardBottomBorder GLORIFY paddingNone marginXS">
-  <img src="/projectImages/Cover_Glorify.png" alt="Glorify: Transforming Solitary Devotion into Community Engagement">
-
-  <div class="element">
-    <a class="no-hover-effect" href="/glorify/">
+  <a class="no-hover-effect" href="/glorify/">
+    <img src="/projectImages/Cover_Glorify.png" alt="Glorify: Transforming Solitary Devotion into Community Engagement">
+    <div class="element">
       <h3 class="arrCard" data-aos="fade-up"><strong>Glorify: Transforming Solitary Devotion into Community Engagement</strong></h3>
       <h4>This case study explores the evolution of the Glorify app, a mobile platform dedicated to enhancing individual spiritual journeys, into a vibrant community hub for collective faith building.
       </h4>
-    </a>
-  </div>
+    </div>
+  </a>
 </div>
       <div class="Grid-cell shadowBoxLt float cardBorder borderRadiusS cardBottomBorder SEER paddingNone marginXS">
-  <img src="/projectImages/Cover_SEER.png" alt="SEER: Enhancing Brand Impact on Reddit">
-
-  <div class="element">
-    <a class="no-hover-effect" href="/seer/">
+  <a class="no-hover-effect" href="/seer/">
+    <img src="/projectImages/Cover_SEER.png" alt="SEER: Enhancing Brand Impact on Reddit">
+    <div class="element">
       <h3 class="arrCard" data-aos="fade-up"><strong>SEER: Enhancing Brand Impact on Reddit</strong></h3>
       <h4>A conceptual UX case study aimed at transforming Reddit data into actionable
               insights for brand marketers. This design explores the potential of intuitive
               analytics to understand user sentiment and engagement, offering a glimpse into the
               future of targeted marketing strategies.
       </h4>
-    </a>
-  </div>
+    </div>
+  </a>
 </div>
       <div class="Grid-cell shadowBoxLt float cardBorder borderRadiusS cardBottomBorder APPOINTA paddingNone marginXS">
-  <img src="/projectImages/Cover_APPOINTA.png" alt="APPOINTA: Interview Scheduling Made Simple">
-
-  <div class="element">
-    <a class="no-hover-effect" href="/appointa/">
+  <a class="no-hover-effect" href="/appointa/">
+    <img src="/projectImages/Cover_APPOINTA.png" alt="APPOINTA: Interview Scheduling Made Simple">
+    <div class="element">
       <h3 class="arrCard" data-aos="fade-up"><strong>APPOINTA: Interview Scheduling Made Simple</strong></h3>
       <h4>Explore my UX case study aimed at revamping interview scheduling. This project
                 streamlines the recruiter&#39;s tasks, speeds up hiring, and enhances scheduling
                 experiences, reducing interview coordination time and boosting recruitment efficiency.
       </h4>
-    </a>
-  </div>
+    </div>
+  </a>
 </div>
     </div>
 
@@ -666,15 +662,14 @@
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-3">
       <div class="Grid-cell shadowBoxLt float cardBorder borderRadiusS cardBottomBorder  paddingNone marginXS">
-  <img src="/projectImages/vicky_website_short.svg" alt="Scalable Design System Design and Implementation">
-
-  <div class="element">
-    <a class="no-hover-effect" href="/design_system/">
+  <a class="no-hover-effect" href="/design_system/">
+    <img src="/projectImages/vicky_website_short.svg" alt="Scalable Design System Design and Implementation">
+    <div class="element">
       <h3 class="arrCard" data-aos="fade-up"><strong>Scalable Design System Design and Implementation</strong></h3>
       <h4>A comprehensive system that enhances the scalability and consistency of UX design. It serves as a practical guide for designing scalable, efficient, and cohesive user interfaces and experiences.
       </h4>
-    </a>
-  </div>
+    </div>
+  </a>
 </div>
 
     </div>
