--- a/html/index.html
+++ b/html/index.html
@@ -188,13 +188,12 @@
   <div class="Grid Grid--full Grid--gutters">
     <div class="Grid-cell">
       <div class="element">
-        <p class="t-hello">hello, I&#39;m Vicky.
-  </p>
+        <p class="t-hello">👋🏻 hello, I&#39;m Vicky.</p>
       </div>
     </div>
   </div>
 </div>
-    
+  
 
 
 
@@ -265,15 +264,7 @@
     </div>
   </div>
 </div>
-  <div class="wrapper">
-    <div class="Grid Grid--full Grid--gutters">
-        <div class="Grid-cell">
-            <div class="element">
-                <h3>I am based in San Francisco and am deeply committed to developing web solutions for both businesses and consumers. My approach hinges on dissecting complex challenges and transforming them into clear, efficient, and impactful digital experiences.</h3>
-            </div>
-        </div>
-    </div>
-</div>
+
 
   <div class="wrapper">
   <div class="Grid Grid--gutters Grid--cols-8 u-textCenter Grid--center">
