--- a/html/photography/index.html
+++ b/html/photography/index.html
@@ -188,7 +188,7 @@
   <div class="Grid Grid--full Grid--gutters">
     <div class="Grid-cell">
       <div class="element">
-        <p class="t-hello">hi there!</p>
+        <p class="t-hello">👋🏻 hi there!</p>
       </div>
     </div>
   </div>
