--- a/html/architecture/thesis_studio/index.html
+++ b/html/architecture/thesis_studio/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Basic Metadata -->
-  <link rel="canonical" href="https://vickywang.me/thesis_studio/">
+  <link rel="canonical" href="https://vickywang.me/architecture/thesis_studio">
 
   <title>
     Systems in Architecture: Exploring Continuity and Discontinuity in Design by Vicky Wang
@@ -25,14 +25,14 @@
         <meta property="og:title"
           content="Systems in Architecture: Exploring Continuity and Discontinuity in Design by Vicky WangInnovative UX Strategist Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang">
         <meta property="og:" content="This thesis examines the dynamic interplay of continuity and discontinuity in architectural systems. Focusing on the spatial arrangement of elements and their impact on design, it explores how architects manipulate these concepts to create meaningful, harmonious structures.">
-        <meta property="og:url" content="https://vickywang.me/thesis_studio/">
+        <meta property="og:url" content="https://vickywang.me/architecture/thesis_studio">
         <meta property="og:site_name" content="Vicky's Website">
         <meta property="og:image"
           content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image">
-        <meta property="twitter:url" content="https://vickywang.me/thesis_studio/">
+        <meta property="twitter:url" content="https://vickywang.me/architecture/thesis_studio">
         <meta property="twitter:title" content="Systems in Architecture: Exploring Continuity and Discontinuity in Design by Vicky Wang">
         <meta property="twitter:description" content="This thesis examines the dynamic interplay of continuity and discontinuity in architectural systems. Focusing on the spatial arrangement of elements and their impact on design, it explores how architects manipulate these concepts to create meaningful, harmonious structures.">
         <meta property="twitter:image"
@@ -125,6 +125,11 @@
 </div>
 <!-- progressBarScroll -->
   
+
+
+
+
+
 
 
 <!-- header -->
