--- a/html/index.html
+++ b/html/index.html
@@ -125,6 +125,11 @@
   
 
 
+
+
+
+
+
 <!-- header -->
 
 
@@ -514,7 +519,7 @@
     <a class="no-hover-effect">
       <div class="">
         <div class="img__wrap">
-          <img class="img__img" alt="Shifting Focus: The Evolution of LASO to RX Zero" src="/projectImages/Cover_LASO_RXZero.png" />
+          <img class="img__img" alt="Shifting Focus: The Evolution of LASO Local &amp; Telehealth to RX Zero" src="/projectImages/Cover_LASO_RXZero.png" />
           <div class="img__description">
             <div class="input-field">
               <div class="column">
@@ -525,7 +530,7 @@
                 <div class="pwContainer">
                   <input class="PWinputLH psJS" type="password" id="rxZero" placeholder="Enter password">
                   <button class="passwordArr" type="submit">
-                    <img src="/icon/arrow-forward.svg" width="908" height="504" alt="Shifting Focus: The Evolution of LASO to RX Zero">
+                    <img src="/icon/arrow-forward.svg" width="908" height="504" alt="Shifting Focus: The Evolution of LASO Local &amp; Telehealth to RX Zero">
                   </button>
                 </div>
                 <div class="pwIncorrectHeight">
@@ -537,7 +542,7 @@
           <div class="element">
             <div class="element">
               <h5>Password is required</h5>
-              <h3 class="arrCard"><strong>Shifting Focus: The Evolution of LASO to RX Zero
+              <h3 class="arrCard"><strong>Shifting Focus: The Evolution of LASO Local &amp; Telehealth to RX Zero
                 </strong></h3>
               <h4>This case study delves into LASO Health&#39;s strategic pivot towards the RX Zero model, moving away from RX Local and Telemedicine services. It highlights the key objectives of RX Zero, centering on credibility and affordability. The study showcases the streamlined onboarding and subscription process, along with a simplified ordering system.
               </h4>
