--- a/html/about/index.html
+++ b/html/about/index.html
@@ -18,95 +18,106 @@
 
 
   
-      
-        <!-- Open Graph / Facebook -->
-        <meta property="og:locale" content="en_US">
-        <meta property="og:type" content="website">
-        <meta property="og:title"
-          content="UX Designer Specializing in SaaS and Consumer Mobile Applications - Vicky WangInnovative UX Strategist Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang">
-        <meta property="og:" content="Vicky Wang, a seasoned UX designer, excels in creating intuitive solutions for B2B SaaS platforms and consumer applications, simplifying complex user experiences for enhanced business outcomes.">
-        <meta property="og:url" content="https://vickywang.me/about">
-        <meta property="og:site_name" content="Vicky's Website">
-        <meta property="og:image"
-          content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:locale" content="en_US">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="UX Designer Specializing in SaaS and Consumer Mobile Applications - Vicky Wang">
+  <meta property="og:" content="Vicky Wang, a seasoned UX designer, excels in creating intuitive solutions for B2B SaaS platforms and consumer applications, simplifying complex user experiences for enhanced business outcomes.">
+  <meta property="og:url" content="https://vickywang.me/about">
+  <meta property="og:site_name" content="Vicky's Website">
+  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
 
-        <!-- Twitter -->
-        <meta property="twitter:card" content="summary_large_image">
-        <meta property="twitter:url" content="https://vickywang.me/about">
-        <meta property="twitter:title" content="UX Designer Specializing in SaaS and Consumer Mobile Applications - Vicky Wang">
-        <meta property="twitter:description" content="Vicky Wang, a seasoned UX designer, excels in creating intuitive solutions for B2B SaaS platforms and consumer applications, simplifying complex user experiences for enhanced business outcomes.">
-        <meta property="twitter:image"
-          content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://vickywang.me/about">
+  <meta property="twitter:title" content="UX Designer Specializing in SaaS and Consumer Mobile Applications - Vicky Wang">
+  <meta property="twitter:description" content="Vicky Wang, a seasoned UX designer, excels in creating intuitive solutions for B2B SaaS platforms and consumer applications, simplifying complex user experiences for enhanced business outcomes.">
+  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
 
-        <!-- favicon -->
+  <!-- favicon -->
 
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="manifest" href="/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 
 
 
-        <!-- Google Font Preconnect-->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <!-- Google Font Preconnect-->
-        <link
-          href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-          rel="stylesheet">
-        <!--sitewide font-family: 'Lato', sans-serif; -->
-        <link
-          href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Caveat:wght@400;500;600;700&display=swap"
-          rel="stylesheet">
-        <!--handwriting -  font-family: 'Caveat', sans-serif; -->
-        <!--handwriting -  font-family: 'Caveat Brush', sans-serif; -->
+  <!-- Google Font Preconnect-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- Google Font Preconnect-->
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+  <!--sitewide font-family: 'Lato', sans-serif; -->
+  <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Caveat:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <!--handwriting -  font-family: 'Caveat', sans-serif; -->
+  <!--handwriting -  font-family: 'Caveat Brush', sans-serif; -->
 
-        <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
-        <!--handwriting font-family: 'Indie Flower'; -->
+  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+  <!--handwriting font-family: 'Indie Flower'; -->
 
-        <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
-        <!--handwriting font-family: 'Gloria Hallelujah';  | Hello font|-->
+  <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+  <!--handwriting font-family: 'Gloria Hallelujah';  | Hello font|-->
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"
-          integrity="sha512-E8QSvWZ0eCLGk4km3hxSsNmGWbLtSCSUcewDQPQWZF6pEU8GlT8a5fF32wOl1i8ftdMhssTrF/OhyGWwonTcXA=="
-          crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <!-- crypto js -->
-        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-        <!--jQuery-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js" integrity="sha512-E8QSvWZ0eCLGk4km3hxSsNmGWbLtSCSUcewDQPQWZF6pEU8GlT8a5fF32wOl1i8ftdMhssTrF/OhyGWwonTcXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <!-- crypto js -->
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <!--jQuery-->
 
-        <!--aos-->
-        <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <!--aos-->
+  <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 
 
-        <!-- <link href="https://cdn.jsdelivr.net/npm/the-new-css-reset@1.11.2/css/reset.min.css" rel="stylesheet"> -->
+  <!-- <link href="https://cdn.jsdelivr.net/npm/the-new-css-reset@1.11.2/css/reset.min.css" rel="stylesheet"> -->
 
-        <!-- CSS Reset -->
-        <link rel="stylesheet" href="/main.css">
-        <script type="text/javascript" src="/scripts.js"></script>
+  <!-- CSS Reset -->
+  <link rel="stylesheet" href="/main.css">
+  <script type="text/javascript" src="/scripts.js"></script>
 
 
 
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8YXDWJST2"></script>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script>
-          window.dataLayer = window.dataLayer || [];
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8YXDWJST2"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
-          function gtag() {
-            dataLayer.push(arguments);
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-E8YXDWJST2');
+  </script>
+  <!-- google analytics-->
+  <script>
+    ! function(t, e) {
+      var o, n, p, r;
+      e.__SV || (window.posthog = e, e._i = [], e.init = function(i, s, a) {
+        function g(t, e) {
+          var o = e.split(".");
+          2 == o.length && (t = t[o[0]], e = o[1]), t[e] = function() {
+            t.push([e].concat(Array.prototype.slice.call(arguments, 0)))
           }
-          gtag('js', new Date());
+        }(p = t.createElement("script")).type = "text/javascript", p.async = !0, p.src = s.api_host + "/static/array.js", (r = t.getElementsByTagName("script")[0]).parentNode.insertBefore(p, r);
+        var u = e;
+        for (void 0 !== a ? u = e[a] = [] : a = "posthog", u.people = u.people || [], u.toString = function(t) {
+            var e = "posthog";
+            return "posthog" !== a && (e += "." + a), t || (e += " (stub)"), e
+          }, u.people.toString = function() {
+            return u.toString(1) + ".people (stub)"
+          }, o = "capture identify alias people.set people.set_once set_config register register_once unregister opt_out_capturing has_opted_out_capturing opt_in_capturing reset isFeatureEnabled onFeatureFlags getFeatureFlag getFeatureFlagPayload reloadFeatureFlags group updateEarlyAccessFeatureEnrollment getEarlyAccessFeatures getActiveMatchingSurveys getSurveys".split(" "), n = 0; n < o.length; n++) g(u, o[n]);
+        e._i.push([i, s, a])
+      }, e.__SV = 1)
+    }(document, window.posthog || []);
+    posthog.init('phc_YFfkBPuCDNKqDW2MiN26UiK6ooMATaOfqxm59vE2QP5', {
+      api_host: 'https://app.posthog.com'
+    })
+  </script>
 
-          gtag('config', 'G-E8YXDWJST2');
-        </script>
-        <!-- google analytics-->
-        <script>
-          !function(t,e){var o,n,p,r;e.__SV||(window.posthog=e,e._i=[],e.init=function(i,s,a){function g(t,e){var o=e.split(".");2==o.length&&(t=t[o[0]],e=o[1]),t[e]=function(){t.push([e].concat(Array.prototype.slice.call(arguments,0)))}}(p=t.createElement("script")).type="text/javascript",p.async=!0,p.src=s.api_host+"/static/array.js",(r=t.getElementsByTagName("script")[0]).parentNode.insertBefore(p,r);var u=e;for(void 0!==a?u=e[a]=[]:a="posthog",u.people=u.people||[],u.toString=function(t){var e="posthog";return"posthog"!==a&&(e+="."+a),t||(e+=" (stub)"),e},u.people.toString=function(){return u.toString(1)+".people (stub)"},o="capture identify alias people.set people.set_once set_config register register_once unregister opt_out_capturing has_opted_out_capturing opt_in_capturing reset isFeatureEnabled onFeatureFlags getFeatureFlag getFeatureFlagPayload reloadFeatureFlags group updateEarlyAccessFeatureEnrollment getEarlyAccessFeatures getActiveMatchingSurveys getSurveys".split(" "),n=0;n<o.length;n++)g(u,o[n]);e._i.push([i,s,a])},e.__SV=1)}(document,window.posthog||[]);
-          posthog.init('phc_YFfkBPuCDNKqDW2MiN26UiK6ooMATaOfqxm59vE2QP5', {api_host: 'https://app.posthog.com'})
-        </script>
- 
-        <!-- posthog analytics-->
+  <!-- posthog analytics-->
 
 </head>
 <!--Head-->
