--- a/html/index.html
+++ b/html/index.html
@@ -118,6 +118,32 @@
   </script>
 
   <!-- posthog analytics-->
+  <!-- Meta Pixel Code -->
+  <script>
+    ! function(f, b, e, v, n, t, s) {
+      if (f.fbq) return;
+      n = f.fbq = function() {
+        n.callMethod ?
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+      };
+      if (!f._fbq) f._fbq = n;
+      n.push = n;
+      n.loaded = !0;
+      n.version = '2.0';
+      n.queue = [];
+      t = b.createElement(e);
+      t.async = !0;
+      t.src = v;
+      s = b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t, s)
+    }(window, document, 'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '167714757489154');
+    fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=167714757489154&ev=PageView&noscript=1" /></noscript>
+  <!-- End Meta Pixel Code -->
+
 
 </head>
 <!--Head-->
@@ -354,7 +380,7 @@
     <a class="no-hover-effect">
       <div class="">
         <div class="img__wrap">
-          <img class="img__img" alt="Streamlined Onboarding &amp; Engagement: Mastering B2B SaaS Subscription Success" src="/projectImages/Cover_BYP_AppB2B.png" />
+          <img class="img__img" alt="Simplified B2B Onboarding &amp; Enhanced Engagement for Business Owners" src="/projectImages/Cover_BYP_AppB2B.png" />
           <div class="img__description">
             <div class="input-field">
               <div class="column">
@@ -365,7 +391,7 @@
                 <div class="pwContainer">
                   <input class="PWinput psJS" type="password" id="onboardingSubscription" placeholder="Enter password">
                   <button class="passwordArr" type="submit">
-                    <img src="/icon/arrow-forward.svg" width="908" height="504" alt="Streamlined Onboarding &amp; Engagement: Mastering B2B SaaS Subscription Success">
+                    <img src="/icon/arrow-forward.svg" width="908" height="504" alt="Simplified B2B Onboarding &amp; Enhanced Engagement for Business Owners">
                   </button>
                 </div>
                 <div class="pwIncorrectHeight">
@@ -377,7 +403,7 @@
           <div class="element">
             <div class="element">
               <h5>Password is required</h5>
-              <h3 class="arrCard"><strong>Streamlined Onboarding &amp; Engagement: Mastering B2B SaaS Subscription Success
+              <h3 class="arrCard"><strong>Simplified B2B Onboarding &amp; Enhanced Engagement for Business Owners
                 </strong></h3>
               <h4>Enhancing the onboarding and subscription experience for B2B clients in the SaaS domain. Our focus was on demystifying and refining these critical processes to ensure a seamless and engaging transition for new users.
               </h4>
@@ -393,7 +419,7 @@
     <a class="no-hover-effect">
       <div class="">
         <div class="img__wrap">
-          <img class="img__img" alt="BookYourPet Redefined: Powering Up the Pet Service Booking Revolution" src="/projectImages/Cover_BYP_AppB2B_Redesign.png" />
+          <img class="img__img" alt="The Redesign of Pet Booking App" src="/projectImages/Cover_BYP_AppB2B_Redesign.png" />
           <div class="img__description">
             <div class="input-field">
               <div class="column">
@@ -404,7 +430,7 @@
                 <div class="pwContainer">
                   <input class="PWinput psJS" type="password" id="b2bAppRedesign" placeholder="Enter password">
                   <button class="passwordArr" type="submit">
-                    <img src="/icon/arrow-forward.svg" width="908" height="504" alt="BookYourPet Redefined: Powering Up the Pet Service Booking Revolution">
+                    <img src="/icon/arrow-forward.svg" width="908" height="504" alt="The Redesign of Pet Booking App">
                   </button>
                 </div>
                 <div class="pwIncorrectHeight">
@@ -416,7 +442,7 @@
           <div class="element">
             <div class="element">
               <h5>Password is required</h5>
-              <h3 class="arrCard"><strong>BookYourPet Redefined: Powering Up the Pet Service Booking Revolution
+              <h3 class="arrCard"><strong>The Redesign of Pet Booking App
                 </strong></h3>
               <h4>Revolutionized BookYourPet with a strategic platform redesign, elevating user engagement and streamlining operations. Our focused overhaul on essential features led to a 45% surge in user satisfaction, reshaping pet care services. Discover our journey towards a seamless pet service experience.
               </h4>
