--- a/html/index.html
+++ b/html/index.html
@@ -380,7 +380,7 @@
     <a class="no-hover-effect">
       <div class="">
         <div class="img__wrap">
-          <img class="img__img" alt="Simplified B2B Onboarding &amp; Enhanced Engagement for Business Owners" src="/projectImages/Cover_BYP_AppB2B.png" />
+          <img class="img__img" alt="Mastering B2B SaaS Subscription Success" src="/projectImages/Cover_BYP_AppB2B.png" />
           <div class="img__description">
             <div class="input-field">
               <div class="column">
@@ -391,7 +391,7 @@
                 <div class="pwContainer">
                   <input class="PWinput psJS" type="password" id="onboardingSubscription" placeholder="Enter password">
                   <button class="passwordArr" type="submit">
-                    <img src="/icon/arrow-forward.svg" width="908" height="504" alt="Simplified B2B Onboarding &amp; Enhanced Engagement for Business Owners">
+                    <img src="/icon/arrow-forward.svg" width="908" height="504" alt="Mastering B2B SaaS Subscription Success">
                   </button>
                 </div>
                 <div class="pwIncorrectHeight">
@@ -403,9 +403,9 @@
           <div class="element">
             <div class="element">
               <h5>Password is required</h5>
-              <h3 class="arrCard"><strong>Simplified B2B Onboarding &amp; Enhanced Engagement for Business Owners
+              <h3 class="arrCard"><strong>Mastering B2B SaaS Subscription Success
                 </strong></h3>
-              <h4>Enhancing the onboarding and subscription experience for B2B clients in the SaaS domain. Our focus was on demystifying and refining these critical processes to ensure a seamless and engaging transition for new users.
+              <h4>This case study delves into the strategic enhancements made to the onboarding process of a B2B SaaS platform, aimed at simplifying user experience and boosting subscription rates. It explores the challenges faced, the solutions implemented, and the significant impact these changes had on user satisfaction and conversion rates, ultimately driving subscription success in a competitive market.
               </h4>
             </div>
           </div>
