--- a/html/index.html
+++ b/html/index.html
@@ -381,7 +381,7 @@
     <a class="no-hover-effect">
       <div class="">
         <div class="img__wrap">
-          <img class="img__img" alt="The Redesign of Pet Booking App" src="/projectImages/Cover_BYP_AppB2B_Redesign.png" />
+          <img class="img__img" alt="Pet B2B Booking App Revamp: The Transition from White-Glove to Self-Service" src="/projectImages/Cover_BYP_AppB2B_Redesign.png" />
           <div class="img__description">
             <div class="input-field">
               <div class="column">
@@ -392,7 +392,7 @@
                 <div class="pwContainer">
                   <input class="PWinput psJS" type="password" id="b2bAppRedesign" placeholder="Enter password">
                   <button class="passwordArr" type="submit">
-                    <img src="/icon/arrow-forward.svg" width="908" height="504" alt="The Redesign of Pet Booking App">
+                    <img src="/icon/arrow-forward.svg" width="908" height="504" alt="Pet B2B Booking App Revamp: The Transition from White-Glove to Self-Service">
                   </button>
                 </div>
                 <div class="pwIncorrectHeight">
@@ -404,9 +404,10 @@
           <div class="element">
             <div class="element">
               <h5>Password is required</h5>
-              <h3 class="arrCard"><strong>The Redesign of Pet Booking App
+              <h3 class="arrCard"><strong>Pet B2B Booking App Revamp: The Transition from White-Glove to Self-Service
                 </strong></h3>
-              <h4>Revolutionized BookYourPet with a strategic platform redesign, elevating user engagement and streamlining operations. Our focused overhaul on essential features led to a 45% surge in user satisfaction, reshaping pet care services. Discover our journey towards a seamless pet service experience.
+              <h4>Discover how we transformed the BookYourPet app with a strategic redesign, shifting from a white-glove service to a user-friendly self-service platform. This overhaul focused on enhancing key features, resulting in a significant 45% increase in user satisfaction and a more streamlined experience for pet owners. Join us on our journey to revolutionize pet care services with a seamless and intuitive booking experience.
+      
               </h4>
             </div>
           </div>
@@ -416,8 +417,7 @@
 </div>
     </div>
     <div class="Grid Grid--gutters Grid--cols-2">
-
-
+      <!--
       <div class="Grid-cell cardBottomBorder BYP float cardBorder borderRadiusS shadowBoxLt paddingNone marginXS">
     <a class="no-hover-effect">
       <div class="">
@@ -448,6 +448,44 @@
               <h3 class="arrCard"><strong>Consumer Booking Experience: A Journey to Enhanced Engagement and Conversion
                 </strong></h3>
               <h4>Improving the consumer booking flow within a dynamic service platform. Our mission was to identify and alleviate pain points in the existing booking process, with a goal to substantially elevate user engagement and increase conversion rates.
+              </h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    </a>
+</div>
+        -->
+        <div class="Grid-cell cardBottomBorder LASO float cardBorder borderRadiusS shadowBoxLt paddingNone marginXS">
+    <a class="no-hover-effect">
+      <div class="">
+        <div class="img__wrap">
+          <img class="img__img" alt="Shifting Focus: The Evolution of LASO Local &amp; Telehealth to RX Zero" src="/projectImages/Cover_LASO_RXZero.png" />
+          <div class="img__description">
+            <div class="input-field">
+              <div class="column">
+                <label for="rxZero">
+                  <h5>Password</h5>
+                </label>
+
+                <div class="pwContainer">
+                  <input class="PWinputLH psJS" type="password" id="rxZero" placeholder="Enter password">
+                  <button class="passwordArr" type="submit">
+                    <img src="/icon/arrow-forward.svg" width="908" height="504" alt="Shifting Focus: The Evolution of LASO Local &amp; Telehealth to RX Zero">
+                  </button>
+                </div>
+                <div class="pwIncorrectHeight">
+                  <span id="pwIncorrect">Password is incorrect </span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="element">
+            <div class="element">
+              <h5>Password is required</h5>
+              <h3 class="arrCard"><strong>Shifting Focus: The Evolution of LASO Local &amp; Telehealth to RX Zero
+                </strong></h3>
+              <h4>This case study delves into LASO Health&#39;s strategic pivot towards the RX Zero model, moving away from RX Local and Telemedicine services. It highlights the key objectives of RX Zero, centering on credibility and affordability. The study showcases the streamlined onboarding and subscription process, along with a simplified ordering system.
               </h4>
             </div>
           </div>
@@ -499,43 +537,6 @@
     <a class="no-hover-effect">
       <div class="">
         <div class="img__wrap">
-          <img class="img__img" alt="Shifting Focus: The Evolution of LASO Local &amp; Telehealth to RX Zero" src="/projectImages/Cover_LASO_RXZero.png" />
-          <div class="img__description">
-            <div class="input-field">
-              <div class="column">
-                <label for="rxZero">
-                  <h5>Password</h5>
-                </label>
-
-                <div class="pwContainer">
-                  <input class="PWinputLH psJS" type="password" id="rxZero" placeholder="Enter password">
-                  <button class="passwordArr" type="submit">
-                    <img src="/icon/arrow-forward.svg" width="908" height="504" alt="Shifting Focus: The Evolution of LASO Local &amp; Telehealth to RX Zero">
-                  </button>
-                </div>
-                <div class="pwIncorrectHeight">
-                  <span id="pwIncorrect">Password is incorrect </span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="element">
-            <div class="element">
-              <h5>Password is required</h5>
-              <h3 class="arrCard"><strong>Shifting Focus: The Evolution of LASO Local &amp; Telehealth to RX Zero
-                </strong></h3>
-              <h4>This case study delves into LASO Health&#39;s strategic pivot towards the RX Zero model, moving away from RX Local and Telemedicine services. It highlights the key objectives of RX Zero, centering on credibility and affordability. The study showcases the streamlined onboarding and subscription process, along with a simplified ordering system.
-              </h4>
-            </div>
-          </div>
-        </div>
-      </div>
-    </a>
-</div>
-      <div class="Grid-cell cardBottomBorder LASO float cardBorder borderRadiusS shadowBoxLt paddingNone marginXS">
-    <a class="no-hover-effect">
-      <div class="">
-        <div class="img__wrap">
           <img class="img__img" alt="RX Zero Savings Explorer - Cost-benefit Calculator" src="/projectImages/Cover_LASO_CostCalculator.png" />
           <div class="img__description">
             <div class="input-field">
@@ -569,12 +570,6 @@
       </div>
     </a>
 </div>
-
-    </div>
-    <div class="Grid Grid--gutters Grid--full">
-
-    </div>
-    <div class="Grid Grid--gutters Grid--cols-3">
       <div class="Grid-cell shadowBoxLt float cardBorder borderRadiusS cardBottomBorder GLORIFY paddingNone marginXS">
   <a class="no-hover-effect" href="/glorify/">
     <img src="/projectImages/Cover_Glorify.png" alt="Glorify: Transforming Solitary Devotion into Community Engagement">
@@ -585,6 +580,14 @@
     </div>
   </a>
 </div>
+
+
+    </div>
+    <div class="Grid Grid--gutters Grid--full">
+
+    </div>
+    <div class="Grid Grid--gutters Grid--cols-3">
+
       <div class="Grid-cell shadowBoxLt float cardBorder borderRadiusS cardBottomBorder SEER paddingNone marginXS">
   <a class="no-hover-effect" href="/seer/">
     <img src="/projectImages/Cover_SEER.png" alt="SEER: Enhancing Brand Impact on Reddit">
